--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
   "routes": [
-    {
-      "src": "/[^.]+",
-      "dest": "/index.html",
-      "status": 200
-    }
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
